--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,13 @@ dotnet publish -c Release -r win-x64 --self-contained true -o "$HOME/Desktop"
 
 
 
+refactor
 lazy load settings component
 window startup center firstboot
 
 welcomepage
 settings component
+
+
+settings:
+BootWithCaptureEnabled
