Refactor ColorPicker to use new Config settings and improve color handling

--- a/todo.txt
+++ b/todo.txt
@@ -2,24 +2,22 @@ dotnet publish -c Release -r win-x64 --self-contained true -o "$HOME/Desktop"
 
 
 
+
+settings.settings broken
+
+
 refactor
 lazy load settings component
-window startup center firstboot
-
 welcomepage
 settings component
 
 
-settings:
-BootWithCaptureEnabled
 
-
-
-    // keyboard modifiers
-    /* const uint MOD_ALT     = 0x0001;
-    const uint MOD_CONTROL = 0x0002;
-    const uint MOD_SHIFT   = 0x0004;
-    const uint MOD_WIN     = 0x0008; */
+// keyboard modifiers
+/* const uint MOD_ALT     = 0x0001;
+const uint MOD_CONTROL = 0x0002;
+const uint MOD_SHIFT   = 0x0004;
+const uint MOD_WIN     = 0x0008; */
 
 
 
