--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,7 @@ dotnet publish -c Release -r win-x64 --self-contained true -o "$HOME/Desktop"
 color code meny width
 zoomeview can go ontop of app
 tooltip text
-
-GlobalHotkeyEnabled enabled dis?
-global keybind register from user input
+borderradius settings btn and input?
 
 lazy load settings component
 welcomepage
