--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,6 @@
 dotnet publish -c Release -r win-x64 --self-contained true -o "$HOME/Desktop"
 
 
-
-
-lazy load settings component
-welcomepage
+welcomepage lines + text
+global cursor 
 
