--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,4 @@
 
 dotnet publish -c Release -r win-x64 --self-contained true -o "$HOME/Desktop"
 
-
-welcomepage lines + text
-global cursor 
-
+welcomepage
