--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,9 @@ dotnet publish -c Release -r win-x64 --self-contained true -o "$HOME/Desktop"
 
 welcomepage + buttons style
 
-
-readme update 
+Onwindow bug laptop screen width? screen resolution 125% buggy
+backspace + delete reset keybind field 
+pill och mouse på zoomview? bara när paused? 
+readme update right path
 msstore?
 pipeline?
