--- a/todo.txt
+++ b/todo.txt
@@ -2,13 +2,11 @@
 dotnet publish -c Release -r win-x64 --self-contained true -o "$HOME/Desktop"
 
 
-
-
-pill och mouse på zoomview? bara när paused? 
+Stopwatch class?
+faster capture + render?
 keybind input field colors 
-
 settings button same as welcome
- 
+
 welcomepage?
 
 
