--- a/todo.txt
+++ b/todo.txt
@@ -5,14 +5,7 @@ dotnet publish -c Release -r win-x64 --self-contained true -o "$HOME/Desktop"
 Capture using gpu instead?
 5ms - desktop 200 samples
 4ms - inlined desktop 200 samples
-
-
-
-keybind input field colors 
-settings button same as welcome
-
-
-welcomepage?
+welcomepage? - toggled of atm
 
 
 Readme
